...
    var pagingData:Paging = Paging()
    var searchController:UISearchController?
    
    //MARK: -
    override func viewDidLoad() {
        super.viewDidLoad()
        title = "Buscar Producto"
       
        navigationController?.navigationBar.titleTextAttributes = [NSAttributedString.Key.foregroundColor: UIColor.black]
        
        let vc = storyboard?.instantiateViewController(withIdentifier: "SearchTableView") as! SearchViewController
        
        searchController = UISearchController(searchResultsController: vc)
...
