...
                            <constraint firstItem="cRJ-aA-i69" firstAttribute="trailing" secondItem="7Q8-bP-qXS" secondAttribute="trailing" id="JqH-St-Xfu"/>
                            <constraint firstItem="cRJ-aA-i69" firstAttribute="leading" secondItem="7Q8-bP-qXS" secondAttribute="leading" id="VPr-PF-Lxo"/>
                            <constraint firstItem="u25-Cc-9gf" firstAttribute="trailing" secondItem="7Q8-bP-qXS" secondAttribute="trailing" id="d4o-wY-Urs"/>
                            <constraint firstItem="bW7-CN-Vea" firstAttribute="height" secondItem="cRJ-aA-i69" secondAttribute="height" multiplier="8.68817" priority="250" constant="448.00019000000009" id="zW9-yF-g0G"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Detalle del producto" id="DYa-k6-5KR"/>
                    <size key="freeformSize" width="414" height="1300"/>
                    <connections>
                        <outlet property="ContentViewCarousel" destination="AbD-zB-flr" id="zEg-YF-rvh"/>
                        <outlet property="activityIndicator" destination="WzV-nd-GlD" id="9SY-hl-kfL"/>
                        <outlet property="carousel" destination="Ghf-Cq-xnC" id="C3I-d2-7eT"/>
                        <outlet property="contraintHeigthTable" destination="Ffc-sD-Gtx" id="wHT-0Y-FgX"/>
...
